--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,22 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  layouts:
+    application:
+      title: "MealTracker"
+      brand: "MealTracker"
+      toggle_navigation: "Toggle navigation"
+      footer: "Built by MealTracker Inc."
+  welcome:
+    index:
+      title: "MealTracker"
+      description: "Track your daily calories."
+      sign_up: "Sign up"
+      or: "or"
+      learn_more: "learn more"
+    sign_in:
+      email: "Email"
+      password: "Password"
+      submit: "Sign in"
+    sign_up:
+      submit: "Sign up"
