--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,13 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  activerecord:
+    attributes:
+      user:
+        name: "Your name"
+        email: "Your email"
+        password: "Password"
+        password_confirmation: "Password again"
   layouts:
     application:
       title: "MealTracker"
@@ -30,10 +37,6 @@ en:
     new:
       title: "Sign up"
     form:
-      name: "Your name"
-      email: "Your email"
-      password: "Password"
-      password_confirmation: "Password confirmation"
       submit: "Sign up"
   welcome:
     index:
